tests/src/frontend/typechecking/invalid/mutable_field_1.sk
mutable class Cell(value: String) {
  mutable fun set(v: String): void {
    this.!value = v; // error, this.value is immutable
    void
  }
}
